--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@google/generative-ai": "^0.24.1",
     "@line/bot-sdk": "^10.0.0",
     "@notionhq/client": "^3.1.3",
+    "axios": "^1.6.0",
+    "cheerio": "^1.0.0-rc.12",
     "dotenv": "^17.0.0",
     "express": "^5.1.0"
   }
