--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
-  "keywords": [],
+  "keywords": [
+    "line"
+  ],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
@@ -20,6 +22,10 @@
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
-    "googleapis": "^150.0.1"
+    "googleapis": "^150.0.1",
+    "jsdom": "^26.1.0"
+  },
+  "devDependencies": {
+    "jest": "^30.0.3"
   }
 }
