chore: 更新.gitignore以忽略所有.serena目录及其内容

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,9 @@ google-credentials.json
 
 # serena
 .serena/
+.serena/**
+.serena/**/*
+.serena/**/**
+.serena/**/**/*
+.serena/**/**/**
+/.serena
