修復 Notion API 連線逾時和 Google Calendar ID 配置問題
- 增加 Notion API 30秒超時設定和自動重試機制
- 實作背景重試，避免阻塞應用程式啟動
- 修復 Google Calendar ID 自動偵測主要日曆
- 改善錯誤處理和診斷訊息
- 更新部署文件和環境變數範例

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,11 @@ NOTION_API_TOKEN=your_notion_api_token
 NOTION_DATABASE_ID=your_notion_database_id
 
 # Google Calendar 設定 (可選)
-GOOGLE_CALENDAR_ID=your_google_calendar_id@gmail.com
+# 注意：GOOGLE_CALENDAR_ID 應該是完整的日曆 ID，通常是 email 格式
+# 如果不確定，可以留空，系統會自動使用主要日曆
+GOOGLE_CALENDAR_ID=primary
+# 或使用具體的日曆 ID，例如：
+# GOOGLE_CALENDAR_ID=your_email@gmail.com
 GOOGLE_CREDENTIALS_JSON={"type":"service_account","project_id":"..."}
 
 # 應用程式設定
@@ -22,4 +26,4 @@ BASE_URL=https://your-render-url.com
 # 備註：
 # - GEMINI_API_KEY 為必需，其他兩個為可選的備用 Key
 # - Google Calendar 功能為可選，如不需要可以不設定
-# - BASE_URL 用於生成 Apple 日曆下載連結 
+# - BASE_URL 用於生成 Apple 日曆下載連結
